--- a/PkmnTypeCalcWinUi/Views/MainWindow.xaml
+++ b/PkmnTypeCalcWinUi/Views/MainWindow.xaml
@@ -53,7 +53,7 @@
              <!--Secondary Type combobox-->
             <ComboBox Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" Margin="5" ItemsSource="{Binding SecondaryPkmnTypeList}"
 					   SelectedIndex="0" 
-					  MaxDropDownHeight="1000" SelectedItem="{Binding SelectedSecondaryType}">
+					  MaxDropDownHeight="1000" SelectedItem="{Binding SelectedSecondaryType, Mode=TwoWay}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding TypeName}" Foreground="{Binding TypeColor}" />
