--- a/PkmnTypeCalcWinUi/Views/MainWindow.xaml
+++ b/PkmnTypeCalcWinUi/Views/MainWindow.xaml
@@ -44,8 +44,15 @@
             <!--row 2-->
 
             <!--Primary Type combobox-->
-            <ComboBox Grid.Row="2" HorizontalAlignment="Center" Grid.Column="1" Margin="5" ItemsSource="{Binding PrimaryPkmnTypeList, Mode=TwoWay}" SelectedIndex="0"
-					  MaxDropDownHeight="1000" SelectedItem="{Binding SelectedPrimaryType, Mode=TwoWay}">
+            <ComboBox 
+                Grid.Row="2" 
+                HorizontalAlignment="Center"
+                Grid.Column="1" 
+                Margin="5" 
+                ItemsSource="{Binding PrimaryPkmnTypeList, Mode=TwoWay}" 
+                SelectedIndex="0"
+                MaxDropDownHeight="1000" 
+                SelectedItem="{Binding SelectedPrimaryType, Mode=TwoWay}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding TypeName}" Foreground="{Binding TypeColor}"/>
